# 3D-Engine

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  graphics.c  graphics.h  input.c  main.c  render.c  sdl.c
include/: common.h  error.h  init.h  input.h  qlog.h  render.h  render.hpp  render_types.h  sdl.h  settings.h  shader.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: common.c  error.c  glad.c  init.c  input.c  main.c  main.cpp  qlog.c  render.c  render.cpp  shader.c
